Archive2/b9/2916787758e787/output
main.cpp: In function 'int main(int, char**)':
main.cpp:10:13:   in constexpr expansion of 'f(-5)'
main.cpp:4:54: error: expression '<throw-expression>' is not a constant-expression
     return (x < 0) ? throw std::runtime_error("error") : x;
                                                      ^
main.cpp:10:14: note: in template argument for type 'int' 
     foo<f(-5)>{};
              ^
